--- a/.vscode/header.css
+++ b/.vscode/header.css
@@ -5,21 +5,91 @@
     justify-content: space-between;
 }
 
-.search-bar{
-
-    height: 10px;
-    flex: 1;
+.middle-section{
+    display: flex;
     margin-right: 35px;
     max-width: 500px;
+    align-items: center;
+}
+
+.search-bar{
+    flex: 1;
+    height: 34px;
+    padding-left: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color:grey ;
+    border-radius: 1px;
+    box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+    vertical-align: top;
+}
+.search-bar::placeholder{
+    font-family: Roboto, Arial;
+    font-size: 16px;
+}
+.search-button{
+    height: 38px;
+    width: 60px;
+    padding: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: gray;
+    margin-left: -1px;
+    margin-right: 10px;
+}
+
+.search-icon{
+    height: 30px;
+    
+}
+
+.microphone{
+
+height: 30px;
+
+}
+
+.microphone-button{
+    height: 38px;
+    padding: 0;
+    border-radius: 20px;
+    border: none;
 }
 
 .left-section{
- background-color: aquamarine;
- width: 150px;
+ display: flex;
  margin-right: 75px;
+ align-items: center;
+
 }
 
+.menu{
+    margin-right: 24px;
+    margin-left: 24px;
+}
+
+
+
 .right-section{
-    background-color: brown;
+    display: flex;
+    flex-direction: row;
     width: 200px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.my-picture{
+    border-radius: 15px;
+    width: 30px;
+}
+
+.channel-p
+.notify
+.create{
+    flex: 1;
+}
+
+.channel-p{
+    margin-right: 10px;
 }
