--- a/.vscode/header.css
+++ b/.vscode/header.css
@@ -1,8 +1,19 @@
 .header{
-    height: 50px;
+    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+ 
+    z-index: 100;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color:rgb(208, 208, 208) ;
 }
 
 .middle-section{
@@ -88,6 +99,23 @@ height: 30px;
 .notify
 .create{
     flex: 1;
+}
+
+.notify{
+    position: relative;
+}
+
+.notifications-count{
+    position: absolute;
+    background-color: rgb(175, 11, 11);
+    color: white;
+    top: 0;
+    right: 0;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    border-radius: 50%;
 }
 
 .channel-p{
