--- a/.vscode/video.css
+++ b/.vscode/video.css
@@ -19,6 +19,7 @@
 .channel-picture{
     width: 40px;
     vertical-align: top;
+   
 }
 .channel-text{
     width: 200px;
@@ -34,4 +35,24 @@
     column-gap: 15px;
     row-gap: 40px;
     padding-top: 10px;
+}
+
+.thumbnail-row{
+    position: relative;
+}
+    
+.video_time{
+    font-family: Roboto , Arial;
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-bottom: 2px;
+    padding-top: 2px;
+    border-radius: 2px;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 10px;
+    right: 6px;
 }
