--- a/.vscode/general.css
+++ b/.vscode/general.css
@@ -9,5 +9,7 @@
 
     margin: 0;
    padding-top:80px ;
-   padding-left: 80px;
+   padding-left: 96px;
+   padding-right: 24px;
+   background-color: rgb(248, 248, 248);
 }
