--- a/.vscode/sidebar.css
+++ b/.vscode/sidebar.css
@@ -6,4 +6,29 @@
     top: 60px;
     background-color: white;
     width: 75px;
+    z-index: 200;
+    padding-top: 5px;
+}
+
+.sidebar-link{
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.sidebar-link:hover{
+    background-color: lightgrey;
+}
+
+.sidebar-link div{
+
+ font-family: Roboto , Arial;
+ font-size: 11px;
+ 
+}
+.sidebar-link img{
+    margin-bottom: 6px;
 }
