--- a/profile/profile.css
+++ b/profile/profile.css
@@ -5,6 +5,8 @@
     width: 200px;
     height: 200px;
     border-radius:.9rem ;
+    border: 1px solid white;
+
 }
 
 .container-md {
@@ -22,3 +24,24 @@ font-size: 20px;
 h3{
     border: 0.5px solid;
 }
+
+body{
+    background-color: #003366 !important;
+    color: white;
+
+}
+
+
+
+ol.friends-list {
+    list-style-type: decimal; /* Ordered list displayed in numerical order */
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+
+h1 {
+    font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+
+
